# wotw-seed-lsp

./: .gitignore  Cargo.toml  LICENSE  package-lock.json  package.json
.github/workflows/: build.yaml
editors/vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: wotw-seed.tmLanguage.json
src/: convert.rs  folder_access.rs  main.rs  semantic_tokens.rs
syntaxes/: wotw-seed.tmLanguage.json
