[package]
name = "wotw-seed-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20.0"
wotw_seedgen_seed_language = { path = "F:/dev/github/forks/wotw-seedgen/wotw_seedgen_seed_language" } # TODO publish seed lang crate
